Fix patch script name and site.yml path

--- a/docs/portal/developer-portal/operations/CVE_2023_0461.md
+++ b/docs/portal/developer-portal/operations/CVE_2023_0461.md
@@ -23,7 +23,7 @@ The mitigation script provided below will perform the following actions:
 1. Unload `bonding` and `tls` kernel modules provided `mlx5_core` is not present
 1. Fail if `mlx5_core` is detected to highlight that the mititagtion failed
 
-*Important*: This mitigation is intend for UANs that meet the following criteria:
+**Important**: This mitigation is intend for UANs that meet the following criteria:
 
 * The UANs are connected to HPE Aruba Networking switches (`lcap-individual` must be set for other switch types to allow for unbonded CAN connections)
 * The UANs use HPE Slingshot HSN NICs and not Mellanox ConnectX-5 HSN NICs.
@@ -71,10 +71,10 @@ index 0000000..1ced634
 +fi
 +
 +exit 0
-diff --git a/ansible/site.yml b/ansible/site.yml
+diff --git a/site.yml b/site.yml
 index 7c8f5fc..419321e 100644
---- a/ansible/site.yml
-+++ b/ansible/site.yml
+--- a/site.yml
++++ b/site.yml
 @@ -103,6 +103,9 @@
          loop_var: gpu
        when: not cray_cfs_image|default(false)|bool and
